--- a/index.html
+++ b/index.html
@@ -371,10 +371,32 @@
 
       <h5>2009</h5>
       <ul>
+        <li>December --, 2009: Chocolate chip cookies</li>
+        <li>December 22, 2009: Coconut macaroons</li>
+        <li>December --, 2009: Snickerdoodles from Joy of Cooking</li>
+        <li>December --, 2009: Peanut butter filled chocolate cookies</li>
+        <li>December --, 2009: Cake brownies</li>
+        <li>December --, 2009: Gingerbread blondies from Ultimate Brownies</li>
+        <li>December --, 2009: Almond Macaroons</li>
+        <li>December --, 2009: Chocolate chip cookies from Tollhouse</li>
+        <li>October 31, 2009: Carrot cake with cream cheese frosting</li>
+        <li>October 10, 2009: Chocolate chip cookies</li>
         <li>October 07, 2009: Sticky fig cupcakes with brown sugar sauce from Cupcakes!</li>
         <li>October 07, 2009: Pumpkin bundt cakes with cream cheese frosting from Website</li>
         <li>September 06, 2009: Sticky fig cupcakes with brown sugar sauce from Cupcakes!</li>
+        <li>September 6, 2009: Peanut butter chocolate topped cupcakes</li>
+        <li>June --, 2009: Salted caramel ice cream</li>
+        <li>June --, 2009: Peppermint ice cream</li>
+        <li>June --, 2009: Espresso mascarpone cupcakes</li>
+        <li>June --, 2009: Angel food cake</li>
+        <li>March --, 2009: Cinnamon sugar puff cupcakes from Cupcakes!</li>
+        <li>March --, 2009: Ginger chewies (ginger molasses cookies) from BigFatCookies</li>
+        <li>February 28, 2009: Espresso mascarpone cupcakes</li>
+        <li>February 3, 2009: Peanut butter filled chocolate cookies</li>
+        <li>February --, 2009: Chocolate chip cookies</li>
+        <li>January --, 2009: Oat blondies from Ultimate Brownies</li>
         <li>January 20, 2009: Peppermint ice cream and fudge brownie cookie ice sandwiches from BigFatCookies</li>
+        <li>January --, 2009: Chocolate chip cookies</li>
       </ul>
       
       <h5>2008</h5>
@@ -400,9 +422,9 @@
       <h5>2006</h5>
       <ul>
         <li>March 17, 2006: Banana bread</li>
-        <li>February 25, 2006: Cherry chocolate Cupcakes with fennel cream cheese frosting from Cupcake Bakeshop</li>
+        <li>February 25, 2006: Cherry chocolate Cupcakes with fennel cream cheese frosting from <a href="http://cupcakeblog.com/?p=38">Cupcake Bakeshop</a></li>
         <li>February 25, 2006: Orange chiffon cupcakes with orange butter icing from Cupcakes!</li>
-        <li>February 12, 2006: Ginger-cream filled pumpkin cupcakes with chocolate ganache frosting from Cupcake Bakeshop</li>
+        <li>February 12, 2006: Ginger-cream filled pumpkin cupcakes with chocolate ganache frosting from <a href="http://cupcakeblog.com/?p=31">Cupcake Bakeshop</a></li>
         <li>January 21, 2006: Peanut butter filled chocolate cookies</li>
         <li>January 08, 2006: Butterscotch marble blondies from BigFatCookies</li>
         <li>January 01, 2006: Cinnamon sugar puff cupcakes from Cupcakes!</li>
