add to the bookshelf

--- a/index.html
+++ b/index.html
@@ -494,6 +494,7 @@
         <li><a target="_blank" href="https://milkbarstore.com/collections/cookbooks/products/milk-bar-all-about-cake">Milk Bar: All About Cake</a></li>
         <li><a target="_blank" href="https://www.amazon.com/Crispy-Crunchy-Your-Mouth-Cookies-Medrich/dp/1579653979">Chewy Gooey Crispy Crunchy Melt-in-Your-Mouth Cookies by Alice Medrich</a></li>
         <li><a target="_blank" href="https://www.kingarthurflour.com/recipes">King Arthur Flour Recipes</a></li>
+        <li><a target="_blank" href="https://www.amazon.com/I-Love-Macarons-Hisako-Ogita/dp/0811868710">I Love Macarons</a></li>
       </ul> 
     </div>
 
