fill in gaps in 2011

--- a/index.html
+++ b/index.html
@@ -308,42 +308,90 @@
       <ul>
         <li>December 25, 2011: Brioche from Flour</li>
         <li>December 25, 2011: Brioche au chocolat from Flour</li>
+        <li>December 19, 2011: Apple Cider Snickerdoodles</li>
         <li>December 17, 2011: Sacher and white chocoloate mousse cake from Chocolate Epiphany</li>
+        <li>December --, 2011: Turnovers</li>
+        <li>December 14, 2011: Chocolate torte</li>
         <li>December 03, 2011: Five layer chocolate mousse cake from Chocolate Epiphany</li>
+        <li>November --, 2011: Golden raisin and pecan bread from Flour cookbook, page 296-297</li>
+        <li>November --, 2011: Chocolate chip cookies from Cooks Illustrated, June 2009</li>
+        <li>November 20, 2011: Roulade</li>
+        <li>November --, 2011: Pistachio dacquoise with white chocolate mousse</li>
         <li>November 13, 2011: Cocoa and vanilla macarons with cocoa cream filling from I Love Macarons</li>
         <li>November 06, 2011: Maple glazed pumpkin cream puffs from Website</li>
+        <li>November --, 2011: Peanut butter filled chocolate cookies</li>
         <li>November 02, 2011: Lavender-polenta coffee cake from Website</li>
-        <li>October 21, 2011: Chocolate chip cookies from Cook's Illustrated</li>
+        <li>October --, 2011: Oatmeal molasses bread from The Tassajara Bread Book</li>
+        <li>October 26, 2011: Pumpkin cakes</li>
+        <li>October --, 2011: Flour's famous banana bread from Flour cookbook, page 66</li>
         <li>October 21, 2011: Red velvet cupcakes from Flour</li>
+        <li>October 21, 2011: Chocolate chip cookies from Cook's Illustrated</li>
+        <li>October --, 2011: Midnight chocolate cake from Flour cookbook, page 162-163</li>
+        <li>October --, 2011: Sugar and spice brioche from Flour cookbook, page 75</li>
+        <li>October --, 2011: Brioche from Flour cookbook, page 73-75</li>
         <li>October 05, 2011: Chocolate chip cookies from Cook's Illustrated</li>
         <li>October 05, 2011: Flour's famous banana bread from Flour</li>
         <li>October 01, 2011: Roasted clementine and chocolate tart with a macadamia nut crust from In the Sweet Kitchen</li>
-        <li>September 19, 2011: Vanilla cupcakes from Cupcake Bakeshop</li>
-        <li>September 19, 2011: Vanilla cupcakes from In the Sweet Kitchen</li>
+        <li>October 01, 2011: Three layer yellow cake with pear and apple buttercream filling</li>        
+        <li>September 19, 2011: Vanilla cupcakes</li>
         <li>September 15, 2011: Orange almond cakes from Breakfast, Lunch, Tea</li>
+        <li>September --, 2011: Flourless chocolate cookies from Chocolate Epiphany, page 56</li>
         <li>September 12, 2011: Chocolate-honey madelienes from Chocolate Epiphany</li>
+        <li>September --, 2011: Butterscotch and chocolate chip oatmeal bars from Nestle</li>
+        <li>August --, 2011: Ultimate soft and chewy chocolate chunk cookies from In the Sweet Kitchen, page 501-502</li>
         <li>August 17, 2011: Fudge cookie and pink peppercorn ice cream sandwiches from BigFatCookies</li>
-        <li>August 10, 2011: Flight of sorbet (blueberry, watermelon, bittersweet chocolate) from Chocolate Epiphany</li>
         <li>August 10, 2011: Chocolate chip cookies from Cook's Illustrated</li>
         <li>August 10, 2011: Flight of sorbet (blueberry, watermelon, bittersweet chocolate) from Website</li>
+        <li>July 16, 2011: Mexican wedding cookies</li>
+        <li>July 12, 2011: Vacherin from Cooking From Above - Baking</li>
+        <li>July 10, 2011: Meringues from Chocolate Epiphany, page 53</li>
         <li>July 10, 2011: Mille crepe cake from Chocolate Epiphany</li>
+        <li>July --, 2011: Vanilla cupcakes with chocolate ganache</li>
         <li>June 29, 2011: Chocolate coffee mousse cake from Chocolate Epiphany</li>
+        <li>June --, 2011: Chocolate mousse cake from Chocolate Epiphany</li>
+        <li>June --, 2011: Macarons from I Heart Macarons</li>
+        <li>June --, 2011: Shoofly pie</li>
+        <li>June --, 2011: Chocolate chip cookies  from Cooks Illustrated, June 2009</li>
+        <li>May --, 2011: Meringue clouds from Flour cookbook, page 126-127</li>
         <li>May 28, 2011: Ginger cookie and peach ice cream sandwiches from BigFatCookies</li>
+        <li>May --, 2011: Snickerdoodles from Flour cookbook, page 120-121</li>
+        <li>May 18, 2011: Manchego chive cheese puffs</li>
+        <li>May 14, 2011: Oatmeal raisin cookies from Flour cookbook, page 112-113</li>
+        <li>May 14, 2011: Chocolate espresso cupcakes</li>
         <li>May 11, 2011: Flour's famous banana bread from Flour</li>
         <li>May 07, 2011: Chocolate-ginger angel food cake from Chocolate Epiphany</li>
         <li>April 30, 2011: Chocolate chip cookies from Cook's Illustrated</li>
+        <li>April 27, 2011: Peanut butter tasty kake ice cream</li>
+        <li>April 27, 2011: Peanut butter tasty kakes</li>
+        <li>April --, 2011: Poppyseed angel food cake from In the Sweet Kitchen, page 390-391</li>
+        <li>April --, 2011: Peanut butter tasty kakes</li> 
         <li>April 13, 2011: Flour's famous banana bread from Flour</li>
+        <li>April --, 2011: Burnt Sugar Brownies from Ultimate Brownies, page 28-29</li>
         <li>April 02, 2011: Bittersweet chocolate sorbet from Chocolate Epiphany</li>
+        <li>March --, 2011: Chocolate chip cookies from Cooks Illustrated, June 2009</li>
+        <li>March --, 2011: Peanut butter cookies from Flour cookbook, page 114-115</li>
         <li>March 23, 2011: Poppyseed angel food cake with grapefruit curd from In the Sweet Kitchen</li>
         <li>March 17, 2011: Oatmeal raisin cookies from Flour</li>
+        <li>March --, 2011: Chocolate chip cookies from Cook's Illustrated</li>
         <li>March 12, 2011: Bourbon Crème Brulée from Epicurious</li>
-        <li>March 12, 2011: Almond macaroons from Website</li>
+        <li>March 12, 2011: Almond macaroons</li>
         <li>February 26, 2011: Maple syrup scones from Breakfast, Lunch, Tea</li>
-        <li>February 23, 2011: Lavender scones with honey butter from Website</li>
+        <li>February 23, 2011: Lavender scones with honey butter</li>
+        <li>February --, 2011: Peanut butter cookies from Flour cookbook, page 114-115</li>
+        <li>February --, 2011: Chocolate chip cookies from Cooks Illustrated, June 2009</li>
+        <li>February --, 2011: Lavender scones with honey butter</li>
         <li>February 09, 2011: Chocolate chip cookies from Cook's Illustrated</li>
         <li>February 09, 2011: Peanut butter brownies from The Ultimate Brownie Book</li>
+        <li>February --, 2011: Top-heavy heavenly hash from BigFatCookies, page 72</li>
+        <li>February --, 2011: Really, REALLY Fudgy Brownies from In the Sweet Kitchen, page 488</li>
+        <li>January --, 2011: Molten Chocolate Cakes from Flour cookbook, page 184</li>
+        <li>January --, 2011: Peach Gingerbread Upside-Down Cake from Cooking in Cast Iron, page 202</li>
+        <li>January --, 2011: Peach Gingerbread Upside-Down Cake from Cooking in Cast Iron, page 202</li>
         <li>January 21, 2011: Chocolate chip cookies from Cook's Illustrated</li>
+        <li>January 15 2011: Tiny chocolate chip cookies from <a href="http://www.epicurious.com/recipes/food/views/Tiny-Chocolate-Chip-Cookies-106172">Epicurious</a></li>
         <li>January 15, 2011: Chocolate chip crème brulée with chocolate chip wafers from Website</li>
+        <li>January --, 2011: Homemade Oreo Cookies from Flour</li>
+        <li>January --, 2011: Vanilla pound cake from Flour</li>
       </ul>
 
       <h5>2010</h5>
