--- a/index.html
+++ b/index.html
@@ -102,8 +102,15 @@
         <h4>This is my archive of baking events.</h4>
       </p>
 
+      <h5>2020</h5>
+      <ul>
+        <li>January 1, 2020: Sweet potato rolls from The Bread Bible</li>
+      </ul>
+      
       <h5>2019</h5>
       <ul>
+        <li>December 30, 2019: Sweet potato loaf (sandwich bread) from The Bread Bible</li>
+        <li>December 20, 2019: Chocolate Chip Cookies from Cook’s Illustrated</li>
         <li>December 15, 2019: Peanut Butter Cookies from <a target="_blank" href="https://www.amazon.com/gp/product/081186944X/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=081186944X&linkCode=as2&tag=wijb-20&linkId=9296b95490330256fd87a534d9b91421">Flour: Spectacular Recipes from Boston's Flour Bakery + Cafe</a></li>
         <li>December 14, 2019: Chocolate Chip Cookies from Cook’s Illustrated</li>
         <li>December 14, 2019: Vanilla Dreams from <a href="https://www.kingarthurflour.com/recipes/vanilla-dreams-recipe">King Arthur</a></li>
