--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 
       <h5>2020</h5>
       <ul>
+        <li>January 4, 2020: Chocolate cookies with peanut butter chips</li>
         <li>January 1, 2020: Sweet potato rolls from The Bread Bible</li>
       </ul>
       
