add more bananas and pistachios

--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
 
       <h5>2020</h5>
       <ul>
+        <li>January 15, 2020: Pistachio macarons from <a href="https://www.sweetandsavorybyshinee.com/pistachio-macarons/">Sweet & Savory</a></li>
+        <li>January 10, 2020: Banana bread from <a target="_blank" href="https://www.amazon.com/gp/product/081186944X/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=081186944X&linkCode=as2&tag=wijb-20&linkId=9296b95490330256fd87a534d9b91421">Flour: Spectacular Recipes from Boston's Flour Bakery + Cafe</a></li>
         <li>January 4, 2020: Chocolate cookies with peanut butter chips</li>
         <li>January 1, 2020: Sweet potato rolls from The Bread Bible</li>
       </ul>
