add a few layers

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 
       <h5>2020</h5>
       <ul>
+        <li>January 24, 2020: Chocolate layer cake with <a href="https://tastesbetterfromscratch.com/chocolate-cake-with-chocolate-mousse/">chocolate mousse filling</a> and vanilla frosting from <a href="https://www.kingarthurflour.com/recipes/chocolate-cake-recipe">King Arthur</a></li>
         <li>January 19, 2020: Bagels (sesame, salt) from <a href="https://www.kingarthurflour.com/recipes/bagels-recipe">King Arthur</a></li>
         <li>January 17, 2020: Chocolate Chip Cookies from Cook’s Illustrated</li>
         <li>January 15, 2020: Pistachio macarons from <a href="https://www.sweetandsavorybyshinee.com/pistachio-macarons/">Sweet & Savory</a></li>
