add weight measurements

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
             </figure>            
             
             <p>
-                1¾ cups unbleached all-purpose flour<br>
-                ½ teaspoon baking soda<br>
-                14 tablespoons unsalted butter<br>
-                ½ cup granulated sugar<br>
-                ¾ cup packed dark brown sugar<br>
-                1 teaspoon salt<br>
+                1¾ cups (246 grams) unbleached all-purpose flour<br>
+                ½ teaspoon (4 grams) baking soda<br>
+                14 tablespoons (199 grams) unsalted butter<br>
+                ½ cup (115 grams) granulated sugar<br>
+                ¾ cup (180 grams) packed dark brown sugar<br>
+                1 teaspoon (7 grams) salt<br>
                 2 teaspoons vanilla extract<br>
                 1 large egg<br>
                 1 large egg yolk<br>
