--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 
       <h5>2020</h5>
       <ul>
+        <li>February 14, 2020: Chocolate Chip Cookies from Cook’s Illustrated</li>
         <li>February 8, 2020: Chocolate Chip Cookies from Cook’s Illustrated</li>
         <li>February 6, 2020: Black and White Cake with Dreamy Vanilla Frosting from Vintage Cakes, page 123-124, 146, 156</li>
         <li>January 24, 2020: Chocolate layer cake with <a href="https://tastesbetterfromscratch.com/chocolate-cake-with-chocolate-mousse/">chocolate mousse filling</a> and vanilla frosting from <a href="https://www.kingarthurflour.com/recipes/chocolate-cake-recipe">King Arthur</a></li>
