add more bread, eclairs, and cookies

--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
 
       <h5>2020</h5>
       <ul>
+        <li>March 1, 2020: Whole Wheat Walnut Demi-Baguettes from Bouchon Bakery</li>
+        <li>February 29, 2020: Eclairs filled with Chocolate Creme from Bouchon Bakery</li>
+        <li>February 26, 2020: Chocolate Chip Cookies from Cook’s Illustrated</li>
         <li>February 14, 2020: Chocolate Chip Cookies from Cook’s Illustrated</li>
         <li>February 8, 2020: Chocolate Chip Cookies from Cook’s Illustrated</li>
         <li>February 6, 2020: Black and White Cake with Dreamy Vanilla Frosting from Vintage Cakes, page 123-124, 146, 156</li>
