--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@
 
       <h5>2020</h5>
       <ul>
+        <li>March 11, 2020: Petit Fours (chocolate pound cake with <a href="https://www.sugarsaltmagic.com/strawberry-and-chocolate-petit-fours/">strawberry buttercream</a>) from The Cake Bible</li>
+        <li>March 7, 2020: Billionaire Shortbread from Flour Bakery</li>
+        <li>March 6, 2020: Chocolate cookies with peanut butter chips</li>
+        <li>March 6, 2020: Whole Wheat Walnut Demi-Baguettes from Bouchon Bakery</li>
         <li>March 1, 2020: Whole Wheat Walnut Demi-Baguettes from Bouchon Bakery</li>
         <li>February 29, 2020: Eclairs filled with Chocolate Creme from Bouchon Bakery</li>
         <li>February 26, 2020: Chocolate Chip Cookies from Cook’s Illustrated</li>
