--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 
       <h5>2020</h5>
       <ul>
+        <li>March 14, 2020: Rosemary Focaccia Sheet from The Bread Bible, page 205-209</li>
         <li>March 11, 2020: Petit Fours (chocolate pound cake with <a href="https://www.sugarsaltmagic.com/strawberry-and-chocolate-petit-fours/">strawberry buttercream</a>) from The Cake Bible</li>
         <li>March 7, 2020: Billionaire Shortbread from Flour Bakery</li>
         <li>March 6, 2020: Chocolate cookies with peanut butter chips</li>
