--- a/index.html
+++ b/index.html
@@ -571,6 +571,24 @@
       </ul> 
     </div>
 
+    <div class="container">
+      <hr>
+      <p class="lead">
+        <h4>This is my equipment.</h4>
+      </p>
+      <ul>
+        <li><a href="https://www.kitchenaid.com/countertop-appliances/stand-mixers/bowl-lift-stand-mixers/p.pro-line-series-7-quart-bowl-lift-stand-mixer.ksm7586psr.html">KitchenAid Pro Line® Series 7 Quart Bowl-Lift Stand Mixer</a></li> 
+        <li>KitchenAid Classic™ Series 4.5 Quart Tilt-Head Stand Mixer</li> 
+        <li>King Arthur Flour Large Cookie Sheet x2</li> 
+        <li><a href="https://shop.kingarthurflour.com/items/king-arthur-flour-jumbo-sheet-pan">King Arthur Flour Jumbo Sheet Pan</a></li> 
+        <li>9" cake pan x2</li> 
+        <li>8" cake pan x2</li>
+        <li>Jelly roll pan x2</li> 
+        <li>Quick bread pan x2</li> 
+        <li>This is only a partial list...</li> 
+      </ul>
+    </div>
+
     <footer class="container">
       <hr>
       <p>Thanks for stopping by. Bake on.</p>
