--- a/index.html
+++ b/index.html
@@ -591,6 +591,14 @@
       </ul>
     </div>
 
+    <div class="container">
+      <hr>
+      <p class="lead">
+        <h4>This is WIJB TV.</h4>
+      </p>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLducQyuq0aQ3MX73bgDni40sB5Tdo0YCt" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
     <footer class="container">
       <hr>
       <p>Thanks for stopping by. Bake on.</p>
