--- a/index.html
+++ b/index.html
@@ -596,7 +596,9 @@
       <p class="lead">
         <h4>This is WIJB TV.</h4>
       </p>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLducQyuq0aQ3MX73bgDni40sB5Tdo0YCt" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/videoseries?list=PLducQyuq0aQ3MX73bgDni40sB5Tdo0YCt" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
     </div>
 
     <footer class="container">
