add to the archive

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 
       <h5>2020</h5>
       <ul>
+        <li>April 17, 2020: Double Chocolate Rye Cookies from Pastry Love (Flour Bakery), page 196-198</li>
         <li>April 12, 2020: Thin, Crispy Chocolate Chip Cookies from Pastry Love (Flour Bakery), page 194-195</li>
         <li>April 10, 2020: No-Knead Crusty White Bread from <a href="https://www.kingarthurflour.com/recipes/no-knead-crusty-white-bread-recipe">King Arthur</a></li>
         <li>March 31, 2020: No-Knead Bread from Jim Lahey via <a href="https://leitesculinaria.com/99521/recipes-jim-laheys-no-knead-bread.html">Leite's Culinaria</a></li>
