add to the backlog

--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
 
       <h5>2020</h5>
       <ul>
+        <li>April 26, 2020: Chocolate Chip Cookies from Cook’s Illustrated</li>
+        <li>April 25, 2020: Sourdough Pretzels from <a href="https://www.kingarthurflour.com/recipes/sourdough-pretzels-recipe">King Arthur Flour</a></li>
+        <li>April 19, 2020: Chocolate Chip Cookies from Cook’s Illustrated</li>
         <li>April 17, 2020: Double Chocolate Rye Cookies from Pastry Love (Flour Bakery), page 196-198</li>
         <li>April 12, 2020: Thin, Crispy Chocolate Chip Cookies from Pastry Love (Flour Bakery), page 194-195</li>
         <li>April 10, 2020: No-Knead Crusty White Bread from <a href="https://www.kingarthurflour.com/recipes/no-knead-crusty-white-bread-recipe">King Arthur</a></li>
