--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 
       <h5>2020</h5>
       <ul>
+        <li>April 27, 2020: Sourdough Boule from Bouchon Bakery, page 302</li>
         <li>April 26, 2020: Chocolate Chip Cookies from Cook’s Illustrated</li>
         <li>April 25, 2020: Sourdough Pretzels from <a href="https://www.kingarthurflour.com/recipes/sourdough-pretzels-recipe">King Arthur Flour</a></li>
         <li>April 19, 2020: Chocolate Chip Cookies from Cook’s Illustrated</li>
