--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 
       <h5>2020</h5>
       <ul>
+        <li>May 8, 2020: Sourdough Chocolate Chip Cookies from <a href="https://www.theboywhobakes.co.uk/recipes/2020/5/7/sourdough-chocolate-chip-cookie">The Boy Who Bakes</a></li>
         <li>May 3, 2020: Sourdough Hamburger Buns from <a href="https://www.kingarthurflour.com/recipes/sourdough-hamburger-buns-recipe">King Arthur Flour</a></li>
         <li>May 2, 2020: Sourdough Pretzels from <a href="https://www.kingarthurflour.com/recipes/sourdough-pretzels-recipe">King Arthur Flour</a></li>
         <li>April 29, 2020: Apple-Pear Galette with Apple Cider Caramel from <a href="https://cooking.nytimes.com/recipes/1019650-apple-pear-galette-with-apple-cider-caramel">New York Times</a></li>
