--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
 
       <h5>2020</h5>
       <ul>
+        <li>May 18, 2020: English Muffin Toasting Bread from <a href="https://www.kingarthurflour.com/recipes/english-muffin-toasting-bread-recipe">King Arthur Flour</a></li>
         <li>May 8, 2020: Sourdough Chocolate Chip Cookies from <a href="https://www.theboywhobakes.co.uk/recipes/2020/5/7/sourdough-chocolate-chip-cookie">The Boy Who Bakes</a></li>
         <li>May 3, 2020: Sourdough Hamburger Buns from <a href="https://www.kingarthurflour.com/recipes/sourdough-hamburger-buns-recipe">King Arthur Flour</a></li>
         <li>May 2, 2020: Sourdough Pretzels from <a href="https://www.kingarthurflour.com/recipes/sourdough-pretzels-recipe">King Arthur Flour</a></li>
