--- a/index.html
+++ b/index.html
@@ -139,7 +139,10 @@
 
       <h5>2020</h5>
       <ul>
+        <li>September 13, 2020: Lime Chocolate Mud Cake from <a target="_blank" href="https://www.amazon.com/gp/product/1607748363/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1607748363&linkCode=as2&tag=wijb-20&linkId=1c2b70315cfb2c6c128dc13ad822d63c">Crumb: A Baking Book</a></li>
+        <li>September 13, 2020: No-Knead Bread from Jim Lahey via <a href="https://leitesculinaria.com/99521/recipes-jim-laheys-no-knead-bread.html">Leite's Culinaria</a></li>
         <li>September 7, 2020: Yeasted Bavarian Plum Cake (Zwetschgendatschi) from <a target="_blank" href="https://www.kingarthurbaking.com/recipes/yeasted-bavarian-plum-cake-zwetschgendatschi-recipe">King Arthur Baking Company</a></li>
+        <li>September 1, 2020: Chocolate Chip Cookies from Cook’s Illustrated</li>
         <li>August 23, 2020: Homemade Fig Newtons from <a target="_blank" href="https://www.amazon.com/gp/product/081186944X/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=081186944X&linkCode=as2&tag=wijb-20&linkId=9296b95490330256fd87a534d9b91421">Flour: Spectacular Recipes from Boston's Flour Bakery + Cafe</a>, page 137-139</li>
         <li>August 20, 2020: Peanut Butter Blondies from Chewy Gooey Crispy Crunchy Melt-in-Your-Mouth Cookies, page 174-175</li>
         <li>August 15, 2020: Olive Oil Cake with Fresh Grapes from Pastry Love (Flour Bakery), page 296-297</li>
