--- a/index.html
+++ b/index.html
@@ -161,6 +161,9 @@
         <li>August 20, 2020: Peanut Butter Blondies from Chewy Gooey Crispy Crunchy Melt-in-Your-Mouth Cookies, page 174-175</li>
         <li>August 15, 2020: Olive Oil Cake with Fresh Grapes from Pastry Love (Flour Bakery), page 296-297</li>
         <li>August 15, 2020: Chocolate Chip Cookies from Cook’s Illustrated</li>
+        <li>July 20, 2020: Apple and Blueberry Hand Pies</li>
+        <li>June 11, 2020: Zebra Cake from <a href="https://www.kingarthurbaking.com/recipes/zebra-cake-recipe">King Arthur Flour</a></li>
+        <li>June 7, 2020: Chocolate Chip Cookies</li>
         <li>May 24, 2020: Cornmeal Lime Cookies from <a target="_blank" href="https://www.amazon.com/gp/product/081186944X/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=081186944X&linkCode=as2&tag=wijb-20&linkId=9296b95490330256fd87a534d9b91421">Flour: Spectacular Recipes from Boston's Flour Bakery + Cafe</a>, page 118-119</li>
         <li>May 18, 2020: English Muffin Toasting Bread from <a href="https://www.kingarthurflour.com/recipes/english-muffin-toasting-bread-recipe">King Arthur Flour</a></li>
         <li>May 8, 2020: Sourdough Chocolate Chip Cookies from <a href="https://www.theboywhobakes.co.uk/recipes/2020/5/7/sourdough-chocolate-chip-cookie">The Boy Who Bakes</a></li>
