add to the past and future

--- a/index.html
+++ b/index.html
@@ -153,6 +153,8 @@
 
       <h5>2020</h5>
       <ul>
+        <li>September 20, 2020: Apple (Cortland) and Plum Hand Pies</li>
+        <li>September 15, 2020: Chocolate Chip Cookies from Cook’s Illustrated</li>
         <li>September 13, 2020: Lime Chocolate Mud Cake from <a target="_blank" href="https://www.amazon.com/gp/product/1607748363/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1607748363&linkCode=as2&tag=wijb-20&linkId=1c2b70315cfb2c6c128dc13ad822d63c">Crumb: A Baking Book</a></li>
         <li>September 13, 2020: No-Knead Bread from Jim Lahey via <a href="https://leitesculinaria.com/99521/recipes-jim-laheys-no-knead-bread.html">Leite's Culinaria</a></li>
         <li>September 7, 2020: Yeasted Bavarian Plum Cake (Zwetschgendatschi) from <a target="_blank" href="https://www.kingarthurbaking.com/recipes/yeasted-bavarian-plum-cake-zwetschgendatschi-recipe">King Arthur Baking Company</a></li>
