--- a/index.html
+++ b/index.html
@@ -153,6 +153,8 @@
 
       <h5>2020</h5>
       <ul>
+        <li>September 24, 2020: Chocolate Madeleines from <a href="https://www.kingarthurbaking.com/recipes/chocolate-madeleines-recipe">King Arthur Baking</a></li>
+        <li>September 24, 2020: Cornmeal Lime Cookies from <a target="_blank" href="https://www.amazon.com/gp/product/081186944X/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=081186944X&linkCode=as2&tag=wijb-20&linkId=9296b95490330256fd87a534d9b91421">Flour: Spectacular Recipes from Boston's Flour Bakery + Cafe</a>, page 118-119</li>
         <li>September 22, 2020: The Easiest Loaf of Bread You'll Ever Bake from <a href="https://www.kingarthurbaking.com/recipes/the-easiest-loaf-of-bread-youll-ever-bake-recipe">King Arthur Baking</a></li>
         <li>September 20, 2020: Apple (Cortland) and Plum Hand Pies</li>
         <li>September 15, 2020: Chocolate Chip Cookies from Cook’s Illustrated</li>
