--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>What is Jeff baking?</title>
 
+    <meta property="og:title" content="What is Jeff baking?">
+    <meta property="og:description" content="Baking on demand by Jeff">
+    <meta property="og:image" content="https://www.whatisjeffbaking.com/images/DSC_3545.jpg">
+    <meta property="og:url" content="https://www.whatisjeffbaking.com/">
+
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/openseadragon/2.4.2/openseadragon.min.js" type="text/javascript"></script>
