rework the jumbotron header

--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
   </head>
   <body>
 
-    <div class="jumbotron">
+    <header class="jumbotron">
         <div class="container">
           <h1 class="display-3">I'd be lying if I didn't say <span>chocolate chip cookies</span>.</h1>
+          <img src="/images/DSC_3545.jpg" class="figure-img img-fluid rounde d-none" alt="Three chocolate chip cookies on a plate.">  
         </div>
-    </div>
+      </header>
 
     <div class="container">
       <p class="lead">
@@ -45,7 +46,7 @@
             <h4 class="mt-0">Perfect Chocolate Chip Cookies</h4>
             <p>(from Cook’s Illustrated May/June 2009)</p>
 
-            <!-- <div class="embed-responsive embed-responsive-16by9 rounded">
+            <div class="embed-responsive embed-responsive-16by9 rounded">
               <div id="osd" class="embed-responsive-item"></div>
             </div>
             <script type="text/javascript">
@@ -57,10 +58,9 @@
                   prefixUrl: "https://cdnjs.cloudflare.com/ajax/libs/openseadragon/2.4.2/images/",
                   tileSources: "/images/DSC_3545/info.json"
               });
-            </script> -->
+            </script>
 
             <figure class="figure">
-                <img src="/images/DSC_3545.jpg" class="figure-img img-fluid rounded" alt="Three chocolate chip cookies on a plate.">  
                 <figcaption class="figure-caption">Notice the abundance of chocolate.</figcaption>
             </figure>            
             
