add scones, cookies, etc

--- a/index.html
+++ b/index.html
@@ -159,6 +159,9 @@
 
       <h5>2020</h5>
       <ul>
+        <li>November 1, 2020: Basic Scones (modified with pecans and oats) from The Big Book of Breakfast</li>
+        <li>October 31, 2020: Chocolate Chip Cookies from Cook’s Illustrated</li>
+        <li>October 8, 2020: Sourdough Chocolate Chip Cookies from <a href="https://www.theboywhobakes.co.uk/recipes/2020/5/7/sourdough-chocolate-chip-cookie">The Boy Who Bakes</a></li>
         <li>September 24, 2020: Chocolate Madeleines from <a href="https://www.kingarthurbaking.com/recipes/chocolate-madeleines-recipe">King Arthur Baking</a></li>
         <li>September 24, 2020: Cornmeal Lime Cookies from <a target="_blank" href="https://www.amazon.com/gp/product/081186944X/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=081186944X&linkCode=as2&tag=wijb-20&linkId=9296b95490330256fd87a534d9b91421">Flour: Spectacular Recipes from Boston's Flour Bakery + Cafe</a>, page 118-119</li>
         <li>September 22, 2020: The Easiest Loaf of Bread You'll Ever Bake from <a href="https://www.kingarthurbaking.com/recipes/the-easiest-loaf-of-bread-youll-ever-bake-recipe">King Arthur Baking</a></li>
