add more equipment

--- a/index.html
+++ b/index.html
@@ -689,6 +689,7 @@
       <ul>
         <li><a href="https://www.kitchenaid.com/countertop-appliances/stand-mixers/bowl-lift-stand-mixers/p.pro-line-series-7-quart-bowl-lift-stand-mixer.ksm7586psr.html">KitchenAid Pro Line® Series 7 Quart Bowl-Lift Stand Mixer</a></li> 
         <li>KitchenAid Classic™ Series 4.5 Quart Tilt-Head Stand Mixer</li> 
+        <li>Ozeri Pronto Digital Scale</li> 
         <li>King Arthur Flour Large Cookie Sheet x2</li> 
         <li><a href="https://shop.kingarthurflour.com/items/king-arthur-flour-jumbo-sheet-pan">King Arthur Flour Jumbo Sheet Pan</a></li> 
         <li>9" cake pan x2</li> 
