--- a/index.html
+++ b/index.html
@@ -159,6 +159,8 @@
 
       <h5>2020</h5>
       <ul>
+        <li>November 22, 2020: Sourdough Pretzels from <a href="https://www.kingarthurflour.com/recipes/sourdough-pretzels-recipe">King Arthur Flour</a></li>
+        <li>November 20, 2020: Blackout Chocolate Banana Bread from <a href="https://www.bonappetit.com/recipe/blackout-chocolate-banana-bread">Bon Appétit</a></li>
         <li>November 14, 2020: Vanilla Macarons with Chocolate Orange Ganache from Bouchon Bakery; <a href="https://youtu.be/6zi4JgKZGkY">bonus making-of video</a></li>
         <li>November 7, 2020: Chocolate Chip Cookies from Cook’s Illustrated</li>
         <li>November 1, 2020: Basic Scones (modified with pecans and oats) from The Big Book of Breakfast</li>
