add pie and cookies

--- a/index.html
+++ b/index.html
@@ -159,6 +159,8 @@
 
       <h5>2020</h5>
       <ul>
+        <li>November 26, 2020: Chocolate Chip Cookies from Cook’s Illustrated</li>
+        <li>November 26, 2020: Apple-Pear Pie from <a href="https://www.kingarthurbaking.com/recipes/apple-pear-pie-recipe">King Arthur Flour</a>; <a href="https://youtu.be/sQDfS8GpOUg">bonus making-of video</a></li>
         <li>November 22, 2020: Sourdough Pretzels from <a href="https://www.kingarthurflour.com/recipes/sourdough-pretzels-recipe">King Arthur Flour</a></li>
         <li>November 20, 2020: Blackout Chocolate Banana Bread from <a href="https://www.bonappetit.com/recipe/blackout-chocolate-banana-bread">Bon Appétit</a></li>
         <li>November 14, 2020: Vanilla Macarons with Chocolate Orange Ganache from Bouchon Bakery; <a href="https://youtu.be/6zi4JgKZGkY">bonus making-of video</a></li>
