--- a/index.html
+++ b/index.html
@@ -159,6 +159,12 @@
 
       <h5>2020</h5>
       <ul>
+        <li>December 15, 2020: Marble Tahini Cookies from <a href="https://cooking.nytimes.com/recipes/1020650-marbled-tahini-cookies">NYT Cooking</a></li>
+        <li>December 15, 2020: Cornmeal Blueberry Crunch Cookies from Big Fat Cookies, page 94</li>
+        <li>December 15, 2020: Caramel Popcorn Cookies from Pastry Love (Flour Bakery), page 191-193</li>
+        <li>December 13, 2020: Caramel Popcorn Cookies from Pastry Love (Flour Bakery), page 191-193</li>
+        <li>December 13, 2020: Vanilla Macarons with Chocolate Orange Ganache from Bouchon Bakery; <a href="https://youtu.be/6zi4JgKZGkY">bonus making-of video</a></li>
+        <li>December 8, 2020: Chocolate Chip Cookies from Cook’s Illustrated</li>
         <li>November 26, 2020: Chocolate Chip Cookies from Cook’s Illustrated</li>
         <li>November 26, 2020: Apple-Pear Pie from <a href="https://www.kingarthurbaking.com/recipes/apple-pear-pie-recipe">King Arthur Flour</a>; <a href="https://youtu.be/sQDfS8GpOUg">bonus making-of video</a></li>
         <li>November 22, 2020: Sourdough Pretzels from <a href="https://www.kingarthurflour.com/recipes/sourdough-pretzels-recipe">King Arthur Flour</a></li>
