--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
 
       <h5>2020</h5>
       <ul>
+        <li>December 20, 2020: Sourdough Crackers from <a href="https://www.kingarthurbaking.com/recipes/sourdough-crackers-recipe">King Arthur Baking Company</a></li>
         <li>December 15, 2020: Marble Tahini Cookies from <a href="https://cooking.nytimes.com/recipes/1020650-marbled-tahini-cookies">NYT Cooking</a></li>
         <li>December 15, 2020: Cornmeal Blueberry Crunch Cookies from Big Fat Cookies, page 94</li>
         <li>December 15, 2020: Caramel Popcorn Cookies from Pastry Love (Flour Bakery), page 191-193</li>
