--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       <ul>
         <li>December 25, 2020: Swedish Cardamom Buns (kardemummabulle) from <a href="https://cooking.nytimes.com/recipes/1020437-swedish-cardamom-buns">New York Times Cooking</a> via Fabrique</li>
         <li>December 24, 2020: Chocolate Chip Cookies from Cook’s Illustrated</li>
-        <li>December 23, 2020: Swedish Peasant Bread from The Professional Pastry Chef, page 145-146li>
+        <li>December 23, 2020: Swedish Peasant Bread from The Professional Pastry Chef, page 145-146</li>
         <li>December 20, 2020: Sourdough Crackers from <a href="https://www.kingarthurbaking.com/recipes/sourdough-crackers-recipe">King Arthur Baking Company</a></li>
         <li>December 15, 2020: Marble Tahini Cookies from <a href="https://cooking.nytimes.com/recipes/1020650-marbled-tahini-cookies">NYT Cooking</a></li>
         <li>December 15, 2020: Cornmeal Blueberry Crunch Cookies from Big Fat Cookies, page 94</li>
