--- a/index.html
+++ b/index.html
@@ -156,6 +156,11 @@
       <p class="lead">
         <h4>This is my archive of baking events.</h4>
       </p>
+      
+      <h5>2021</h5>
+      <ul>
+        <li>January 2, 2021: Sourdough Pretzels (pre-boiled variation) from <a href="https://www.kingarthurflour.com/recipes/sourdough-pretzels-recipe">King Arthur Flour</a></li>
+      </ul>
 
       <h5>2020</h5>
       <ul>
