--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       
       <h5>2021</h5>
       <ul>
-        <li>January 2, 2021: Sourdough Pretzels (pre-boiled variation) from <a href="https://www.kingarthurflour.com/recipes/sourdough-pretzels-recipe">King Arthur Flour</a></li>
+        <li>January 2, 2021: Sourdough Pretzels (pre-boiled variation) from <a href="https://www.kingarthurflour.com/recipes/sourdough-pretzels-recipe">King Arthur Flour</a>; <a href="https://youtu.be/TycGKe1g6NM">bonus making-of video</a></li>
       </ul>
 
       <h5>2020</h5>
