go bananas, go cookies

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/videoseries?list=PLducQyuq0aQ3MX73bgDni40sB5Tdo0YCt" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
-
+    
     <div class="container">
       <hr>
       <p class="lead">
@@ -169,6 +169,8 @@
       
       <h5>2021</h5>
       <ul>
+        <li>January 13, 2020: Banana bread from <a target="_blank" href="https://www.amazon.com/gp/product/081186944X/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=081186944X&linkCode=as2&tag=wijb-20&linkId=9296b95490330256fd87a534d9b91421">Flour: Spectacular Recipes from Boston's Flour Bakery + Cafe</a>, page 66</li>
+        <li>January 6, 2020: Chocolate Chip Cookies from Cook’s Illustrated</li>
         <li>January 2, 2021: Sourdough Pretzels (pre-boiled variation) from <a href="https://www.kingarthurflour.com/recipes/sourdough-pretzels-recipe">King Arthur Flour</a>; <a href="https://youtu.be/TycGKe1g6NM">bonus making-of video</a></li>
       </ul>
 
