--- a/index.html
+++ b/index.html
@@ -169,9 +169,10 @@
       
       <h5>2021</h5>
       <ul>
+        <li>January 23, 2021: Harvest Apple Challah from <a href="https://www.kingarthurbaking.com/recipes/harvest-apple-challah-recipe">King Arthur Baking</a></li>
         <li>January 13, 2020: Banana bread from <a target="_blank" href="https://www.amazon.com/gp/product/081186944X/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=081186944X&linkCode=as2&tag=wijb-20&linkId=9296b95490330256fd87a534d9b91421">Flour: Spectacular Recipes from Boston's Flour Bakery + Cafe</a>, page 66</li>
         <li>January 6, 2020: Chocolate Chip Cookies from Cook’s Illustrated</li>
-        <li>January 2, 2021: Sourdough Pretzels (pre-boiled variation) from <a href="https://www.kingarthurflour.com/recipes/sourdough-pretzels-recipe">King Arthur Flour</a>; <a href="https://youtu.be/TycGKe1g6NM">bonus making-of video</a></li>
+        <li>January 2, 2021: Sourdough Pretzels (pre-boiled variation) from <a href="https://www.kingarthurflour.com/recipes/sourdough-pretzels-recipe">King Arthur Baking</a>; <a href="https://youtu.be/TycGKe1g6NM">bonus making-of video</a></li>
       </ul>
 
       <h5>2020</h5>
