update chocolate amounts

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 2 teaspoons vanilla extract<br>
                 1 large egg<br>
                 1 large egg yolk<br>
-                1¼ cups semisweet chocolate chips or chunks *
+                1¼ to 2¼ cups of semisweet chocolate chips or chunks *
             </p>
 
             <p>
@@ -97,7 +97,7 @@
             </p>
             
             <p>
-              * This is merely a starting point. My current favorite blend is one part hand chopped Trader Joes Pound Plus 72% Dark Chocolate bar. One part Nestlé Toll House Semi-Sweet Morsels. One part broken Belcolade Bittersweet Discs 60% cocoa (courtesy King Arthur Flour).
+              * This is merely a starting point. I typically use about 400g of chocolate. My current favorite blend is one part hand chopped Trader Joes Pound Plus 72% Dark Chocolate bar. One part Nestlé Toll House Semi-Sweet Morsels. One part broken Belcolade Bittersweet Discs 60% cocoa (courtesy King Arthur Flour).
             </p>            
           </div>
         </div>
