--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
       
       <h5>2021</h5>
       <ul>
+        <li>January 26, 2020: Chocolate Chip Cookies from Cook’s Illustrated</li>
         <li>January 23, 2021: Harvest Apple Challah from <a href="https://www.kingarthurbaking.com/recipes/harvest-apple-challah-recipe">King Arthur Baking</a></li>
         <li>January 13, 2020: Banana bread from <a target="_blank" href="https://www.amazon.com/gp/product/081186944X/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=081186944X&linkCode=as2&tag=wijb-20&linkId=9296b95490330256fd87a534d9b91421">Flour: Spectacular Recipes from Boston's Flour Bakery + Cafe</a>, page 66</li>
         <li>January 6, 2020: Chocolate Chip Cookies from Cook’s Illustrated</li>
