add bread and cookies

--- a/index.html
+++ b/index.html
@@ -198,6 +198,10 @@
       
       <h5>2021</h5>
       <ul>
+        <li>August 16, 2021: Zucchini Bread (variation of Carrot Bread) from The Bread Bible, page 103-105</li>
+        <li>August 16, 2021: Double Chocolate Zucchini Bread from <a href="https://www.kingarthurbaking.com/recipes/double-chocolate-zucchini-bread-recipe">King Arthur Baking</a></li>
+        <li>August 14, 2021: Chocolate Chip Cookies from Cook’s Illustrated</li>
+        <li>August 4, 2021: Chocolate Chip Cookies from Cook’s Illustrated</li>
         <li>March 7, 2021: English Muffin Toasting Bread from <a href="https://www.kingarthurbaking.com/recipes/english-muffin-toasting-bread-recipe">King Arthur Baking Company</a></li>
         <li>March 3, 2021: Peanut Butter and Jelly Macarons from Bouchon Bakery, pages 36-37 (peanut butter buttercream), 59-62 (macarons and raspberry buttercream), 375 (basic buttercream)</li>
         <li>March 3, 2021: Chocolate Chip Oatmeal Cookies (added extra flour and oats) from <a href="https://www.kingarthurbaking.com/recipes/chocolate-chip-oatmeal-cookies-recipe">King Arthur Baking Company</a></li>
