--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
         <li>August 16, 2021: Zucchini Bread (variation of Carrot Bread) from The Bread Bible, page 103-105</li>
         <li>August 16, 2021: Double Chocolate Zucchini Bread from <a href="https://www.kingarthurbaking.com/recipes/double-chocolate-zucchini-bread-recipe">King Arthur Baking</a></li>
         <li>August 14, 2021: Chocolate Chip Cookies from Cook’s Illustrated</li>
+        <li>August 7, 2021: No-Knead Bread from Jim Lahey via <a href="https://leitesculinaria.com/99521/recipes-jim-laheys-no-knead-bread.html">Leite's Culinaria</a></li>
         <li>August 4, 2021: Chocolate Chip Cookies from Cook’s Illustrated</li>
         <li>March 7, 2021: English Muffin Toasting Bread from <a href="https://www.kingarthurbaking.com/recipes/english-muffin-toasting-bread-recipe">King Arthur Baking Company</a></li>
         <li>March 3, 2021: Peanut Butter and Jelly Macarons from Bouchon Bakery, pages 36-37 (peanut butter buttercream), 59-62 (macarons and raspberry buttercream), 375 (basic buttercream)</li>
