add internal anchors

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </p>
     </div>
 
-    <div class="container">
+    <div class="container" id="recipe">
       <div class="media">
           <div class="media-body">
             <h4 class="mt-0">Perfect Chocolate Chip Cookies</h4>
@@ -102,7 +102,7 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container" id="about">
       <hr>
       <p class="lead">
         <h4>Hire me.</h4>
@@ -115,7 +115,7 @@
       </p>
     </div>
 
-    <div class="container">
+    <div class="container" id="social">
       <hr>
       <p class="lead">
         <h4>Follow along.</h4>
@@ -137,8 +137,7 @@
       </p>
     </div>
 
-
-    <div class="container">
+    <div class="container" id="highlights">
       <hr>
       <p class="lead">
         <h4>Highlights.</h4>
@@ -180,7 +179,7 @@
 
     </div>
 
-    <div class="container">
+    <div class="container" id="tv">
       <hr>
       <p class="lead">
         <h4>This is WIJB TV.</h4>
@@ -190,7 +189,7 @@
       </div>
     </div>
     
-    <div class="container">
+    <div class="container" id="archive">
       <hr>
       <p class="lead">
         <h4>This is my archive of baking events.</h4>
@@ -728,7 +727,7 @@
       </ul>
     </div>
 
-    <div class="container">
+    <div class="container" id="library">
       <hr>
       <p class="lead">
         <h4>This is my reference library.</h4>
@@ -756,7 +755,7 @@
       </ul> 
     </div>
 
-    <div class="container">
+    <div class="container" id="equipment">
       <hr>
       <p class="lead">
         <h4>This is my equipment.</h4>
